# api.video

./: README.md
quompressor/: .gitignore  Cargo.toml  README.md  main.py
quompressor/doc/: QIM_spec.md
quompressor/examples/: kitchen-2048x2048_loss.qim
quompressor/requirements/: base.in  base.txt
quompressor/src/: lib.rs  main.rs
quompressor/src/node/: error.rs  image.rs  mod.rs  qim.rs
quompressor/src/node/quantization/: mod.rs  palette.rs
