[package]
name = "quompressor"
version = "0.1.0"
edition = "2021"

[lib]
name = "quompressor"
path = "src/lib.rs"

# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use quompressor;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[[bin]]
name = "quompressor"
path = "src/main.rs"

[dependencies]
bitvec = "0.17.4"
clap = "3.2.23"
image = "0.24.5"

pyo3 = { version = "0.17.3", features = ["extension-module"] }